generate interface and peer configuration filenames in backend only (#395)
